Added basic log in functionality;

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -15,7 +15,10 @@
 {{/name}}
 
 {{#name}}
-Hello, {{name}}!
+Hello, {{name}}! <br><br>
+<form action="/logout" method="post">
+    <button type="submit">Log Out</button>
+</form>
 {{/name}}
 
 </body>
