--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -24,11 +24,11 @@ Hello, {{name}}! <br><br>
     <input type="text" placeholder="Hurricane Location" name="hLocation"/>
     <select name="hCat">
         <option selected disabled>Category</option>
-        <option value="ONE">1</option>
-        <option value="TWO">2</option>
-        <option value="THREE">3</option>
-        <option value="FOUR">4</option>
-        <option value="FIVE">5</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
     </select>
     <input type="text" placeholder="Image URL" name="hImage" width="200"/>
     <button type="submit">Submit Hurricane</button>
