Made lots of changes;

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -19,7 +19,7 @@ Hello, {{name}}! <br><br>
 <form action="/logout" method="post">
     <button type="submit">Log Out</button>
 </form><br><br>
-<form action="/hurricane" method="post">
+<form action="/create-hurricane" method="post">
     <input type="text" placeholder="Hurricane Name" name="hName"/>
     <input type="text" placeholder="Hurricane Location" name="hLocation"/>
     <select name="hCat">
@@ -49,7 +49,7 @@ Hello, {{name}}! <br><br>
         <td>{{location}}</td>
         <td>{{category}}</td>
         <td>{{user.name}}</td>
-        <td><img src="{{image}}"/></td>
+        <td><img src="http://{{image}}"/></td>
     </tr>
     {{/hurricanes}}
 </table>
