Finished with optional parts;

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -54,7 +54,12 @@ Hello, {{name}}! <br><br>
     <input type="text" placeholder="# of Hurricane to delete" name="hurricaneToDelete"/>
     <button type="submit">Delete Hurricane</button>
 </form>
-{{/name}}<br>
+{{/name}}<br><br>
+
+<form action="/" method="get">
+    <input type="text" placeholder="Search by name" name="filter"/>
+    <button type="submit">Filter</button>
+</form>
 
 <table>
     <tr>
