Working on EVERYTHING;

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -76,7 +76,7 @@ Hello, {{name}}! <br><br>
         <td>{{name}}</td>
         <td>{{location}}</td>
         <td>{{category}}</td>
-        <td>{{user.name}}</td>
+        <td>{{submitter}}</td>
         <td><img src="http://{{image}}"/></td>
     </tr>
     {{/hurricanes}}
