Working on EVERYTHING;

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -57,7 +57,12 @@ Hello, {{name}}! <br><br>
 {{/name}}<br><br>
 
 <form action="/" method="get">
-    <input type="text" placeholder="Search by name" name="filter"/>
+    <input type="text" placeholder="Filter by hurricane name" name="filter"/>
+    <button type="submit">Filter</button>
+</form><br><br>
+
+<form action="/" method="get">
+    <input type="text" placeholder="Filter by user name" name="filter2"/>
     <button type="submit">Filter</button>
 </form>
 
