--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -74,6 +74,8 @@ Hello, {{name}}! <br><br>
         <th>Category</th>
         <th>Submitter</th>
         <th>Image</th>
+        <th></th>
+        <th></th>
     </tr>
     {{#hurricanes}}
     <tr>
@@ -83,6 +85,19 @@ Hello, {{name}}! <br><br>
         <td>{{category}}</td>
         <td>{{submitter}}</td>
         <td><img src="http://{{image}}"/></td>
+        <td>
+            {{#isMe}}
+            <form action="/delete-hurricane" method="post">
+                <input type="hidden" value="{{id}}" name="id"/>
+                <button type="submit">Delete</button>
+            </form>
+            {{/isMe}}
+        </td>
+        <td>
+
+            <a href="/edit-Hurricane?id={{id}}">Edit</a>
+
+        </td>
     </tr>
     {{/hurricanes}}
 </table>
